--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@prisma/client": "^5.4.1",
     "axios": "^1.5.1",
     "express": "^4.18.2",
     "prisma": "^5.4.1"
