--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.4.1",
     "axios": "^1.5.1",
     "express": "^4.18.2",
+    "nodemon": "^3.0.1",
     "prisma": "^5.4.1"
   }
 }
